--- a/PRGORAMING3/P5-game/aa.css
+++ b/PRGORAMING3/P5-game/aa.css
@@ -1,8 +1,9 @@
 body {
-    background-color: rgb(28, 28, 28);
-    width: 100%;
-    height: 100%;
-  }
+  background-color: rgb(28, 28, 28);
+  width: 100%;
+  height: 100%;
+  zoom: 25%;
+}
 #kar{
 width: 30%;
 height: 150px;
@@ -20,46 +21,59 @@ transition: 400ms;
 color: white;
 }
 #kar:hover{
-  box-shadow: inset 0px 0px 150px cyan;
+box-shadow: inset 0px 0px 150px cyan;
 }
 #sv{
 background-color: rgb(255, 186, 57);
+box-shadow:  10px 0px 30px black;
 }
 #sx{
 background-color: rgb(224, 0, 0);
+box-shadow:  10px 0px 30px black;
 }
 #sc{
-background-color: rgb(47, 103, 255);
+background-image: linear-gradient(rgb(220, 80, 5,2),rgb(196, 15, 5,3));
+box-shadow:  10px 0px 30px black;
 }
-  canvas{
-  position: absolute;
-  left: 0;
-  right: 0;
-  margin: auto;
-  border: solid 5px white;
+
+canvas{
+position: absolute;
+left: 0;
+right: 0;
+margin: auto;
+border: solid 5px white;
+border-radius: 30px;
+}
+#jamanak{
   border-radius: 30px;
-  }
-  .flex{
-    display: flex;
-    justify-content: space-around;
-    margin-top: 200px;
-  }
-  .flex>div{
-    position: relative;
-    top: -100px;
-    width: 25%;
-    height: 150px;
-    font-size: 70px;
-    font-family: sans-serif;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 30px;
-    cursor: pointer;
-    transition: 300ms;
-  }
-  .flex>div:hover{
-    box-shadow: inset 10px 0px 30px white;
-    border-radius: 100px;
-  }
+  width: 15%;
+  position: absolute;
+  border: solid 5px rgb(28, 28, 28);
+  box-shadow:  10px 0px 30px rgb(28, 28, 28);
+top: 90%;
+background-color: rgb(28, 28, 28);
+}
+.flex{
+  display: flex;
+  justify-content: space-around;
+  margin-top: 200px;
+}
+.flex>div{
+  position: relative;
+  top: -100px;
+  width: 25%;
+  height: 150px;
+  font-size: 70px;
+  font-family: sans-serif;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 30px;
+  cursor: pointer;
+  transition: 300ms;
+}
+.flex>div:hover{
+  box-shadow: inset 10px 0px 30px white;
+  border-radius: 100px;
+}
